@@ -1,5 +1,11 @@
 2015-02-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* python/py-framefilter.c (py_print_frame): Put conditional code paths
+	with goto first, indent the former else codepath left.  Put variable
+	'elided' to a new inner block.
+
+2015-02-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* python/py-framefilter.c (py_print_frame): Whitespacing fixes.
 
 2015-02-11  Pedro Alves  <palves@redhat.com>
